--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -134,16 +134,20 @@
       </p>
 
  <img src="plantearth.jpg" class="rounded float-right" alt="...">
-    
+
+<br>
+<br>
+<br>
+<br>   
 <div class="album py-5 bg-light">
         <div class="container">
 
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="plantearth.jpg" alt="Card image cap">
+                <img class="card-img-top" src="https://scholarblogs.emory.edu/vulnerability/files/2019/10/cooperate-2924261_1280-1200x675.png" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Equality article --   see more...</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -156,9 +160,9 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="plantearth.jpg" alt="Card image cap">
+                <img class="card-img-top" src="https://www.washingtonpost.com/wp-stat/graphics/ai2html/POLITICAL-GEOGRAPHY/DUQ6OGR7JBBM3MWUKSZHXAB7IU/US-map-xsmall.jpg?v=4" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Political Race Analysis --   see more...</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -171,9 +175,9 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="plantearth.jpg" alt="Card image cap">
+                <img class="card-img-top" src="https://outdoorgearlab-mvnab3pwrvp3t0.stackpathdns.com/photos/23/98/361302_6173_L2.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Hiking Reviews --   see more...</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -184,6 +188,7 @@
                 </div>
               </div>
             </div>
+                     
               </body>
 </html>
 
