--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -60,7 +60,7 @@
             <div class="alert alert-danger" role="alert">
               
                 <h3>CONS</h3>
-                <p> However, the implications of  addressing climate change where there is no urgency can exploit several millions and billions of dollars towards unnecessary funding of earthcare. If climate change is not as distressing as we believe, then there's no reason to switch over to Electric power and resources that are sustainable but not as economical. Oil and natural gas are critical elements in the structure of the United States of America to make the world run together smoothly. Cities like California already have rolling blackouts because of lack of electricity. More electric cars that don't depend on oil and natural gas will further damage people's abilities to make progress, thus putting more economical strain on countries
+                <p> However, the implications of  addressing climate change where there is no urgency can exploit several millions and billions of dollars towards unnecessary funding of earthcare. If climate change is not as distressing as we believe, then there's no reason to switch over to Electric power and resources that are sustainable but not as economical. Oil and natural gas are critical elements in the structure of the United States of America to make the world run together smoothly. Cities like California already have rolling blackouts because of lack of electricity. More electric cars that don't depend on oil and natural gas will further damage people's abilities to make progress, thus putting more economical strain on countries.
 </p>
             </div>
            
