--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -188,6 +188,10 @@
                 </div>
               </div>
             </div>
+            
+        <p>
+            <a href="https://shrinking-world.com/course/bacs200">&copy; Copyright 2020 - UNC BACS 200 Website</a>
+        </p>
                      
               </body>
 </html>
