--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -191,6 +191,7 @@
             
 <br>
 <br>  
+        <span class="align-bottom">bottom</span>
         <p>
             <a href="https://shrinking-world.com/course/bacs200">&copy; Copyright 2020 - UNC BACS 200 Website</a>
         </p>
