--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -196,3 +196,4 @@
             <a href="https://shrinking-world.com/course/bacs200">&copy;Copyright 2020 - UNC BACS 200 Website</a>
         </p>
                      
+<html lang="en">
