--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -142,11 +142,11 @@
 <div class="album py-5 bg-light">
         <div class="container">
 
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="https://scholarblogs.emory.edu/vulnerability/files/2019/10/cooperate-2924261_1280-1200x675.png" alt="Card image cap">
-                <div class="card-body">
+<div class="row">
+  <div class="col-md-4">
+     <div class="card mb-4 box-shadow">
+          <img class="card-img-top" src="https://scholarblogs.emory.edu/vulnerability/files/2019/10/cooperate-2924261_1280-1200x675.png" alt="Card image cap">
+            <div class="card-body">
                   <p class="card-text">Equality article --   see more...</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -154,10 +154,11 @@
                       <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                     </div>
                     <small class="text-muted">9 mins</small>
-                  </div>
-                </div>
-              </div>
             </div>
+          </div>
+      </div>
+   </div>
+</div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="https://www.washingtonpost.com/wp-stat/graphics/ai2html/POLITICAL-GEOGRAPHY/DUQ6OGR7JBBM3MWUKSZHXAB7IU/US-map-xsmall.jpg?v=4" alt="Card image cap">
@@ -196,4 +197,4 @@
             <a href="https://shrinking-world.com/course/bacs200">&copy;Copyright 2020 - UNC BACS 200 Website</a>
         </p>
                      
-<html lang="en">
+</html>
