--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -171,6 +171,7 @@
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
+                 </div>
                 </div>
               </div>
             </div>
@@ -186,6 +187,7 @@
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
+                </div>
                 </div>
               </div>
             </div>
