--- a/bacs200/blog.html
+++ b/bacs200/blog.html
@@ -195,8 +195,10 @@
 <br>
 <br>  
         
-        <p>
-            <a href="https://shrinking-world.com/course/bacs200">&copy;Copyright 2020 - UNC BACS 200 Website</a>
-        </p>
+        <footer class="text-center m-5">
+        &copy;2021 <a href="https://shrinking-world.com">Shrinking World</a>
+        - Practical Software Engineering
+
+    </footer>
                      
 </html>
