--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -50,28 +50,58 @@
             <td>PROJECT #2</td>
             <td><a href="inspire.html">Inspire Me</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/02" target="instruction">Project 2</a></td>
+             <td>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fadamschott.github.io%2Fbacs200%2Finspire.html">
+                    HTML
+                    Validator
+                </a>
+            </td>
         </tr>
         <tr>
             <td>PROJECT #3</td>
             <td><a href="amuse.html">Amuse Me</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/03" target="instruction">Project 3</a></td>
+             <td>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fadamschott.github.io%2Fbacs200%2Famuse.html">
+                    HTML
+                    Validator
+                </a>
+            </td>
         </tr>
         <tr>
             <td>PROJECT #4</td>
             <td><a href="educate.html">Educate Me</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/04" target="instruction">Project 4</a></td>
+             <td>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fadamschott.github.io%2Fbacs200%2Feducate.html">
+                    HTML
+                    Validator
+                </a>
+            </td>
 
         </tr>
         <tr>
             <td>PROJECT #5</td>
             <td><a href="test.html">Test Me</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/05" target="instruction">Project 5</a></td>
+             <td>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fadamschott.github.io%2Fbacs200%2Ftest.html">
+                    HTML
+                    Validator
+                </a>
+            </td>
 
         </tr>
         <tr>
             <td>PROJECT #6</td>
-            <td><a href="superhero.html">Test Me</a></td>
+            <td><a href="superhero.html">Superhero</a></td>
             <td><a href="https://shrinking-world.com/course/bacs200/project/06" target="instruction">Project 6</a></td>
+             <td>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fadamschott.github.io%2Fbacs200%2Fsuperhero.html">
+                    HTML
+                    Validator
+                </a>
+            </td>
 
         </tr>
     </table>
