--- a/bacs200/educate.html
+++ b/bacs200/educate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Educate Me</title>
+    <title>"Educate Me"</title>
 </head>
 <i class="fa-solid fa-book-open-cover"></i>
 
