--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -91,16 +91,14 @@
 
             <div class="col-lg-6">
                 <div class="card bg-success text-light m-5 p-5">
-                    <h2>Learn More</h2>
+                    <h2>Learn More...</h2>
                     <p>
-                        <a href="https://www.w3schools.com/bootstrap5/bootstrap_carousel.php"
-                            class="btn btn-light text-success">W3Schools
-                            Website</a>
+                        <a href="view-source:https://www.mealsonwheelsgreeley.com/"
+                            class="btn btn-light text-success">Volunteer Today</a>
                     </p>
                     <p>
-                        <a href="https://getbootstrap.com/docs/5.1/components/carousel/"
-                            class="btn btn-light text-success">Bootstrap
-                            Website</a>
+                        <a href="view-source:https://www.mealsonwheelsgreeley.com/"
+                            class="btn btn-light text-success">Make a Donation</a>
                     </p>
                 </div>
             </div>
