--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -15,20 +15,17 @@
             <a class="navbar-brand text-light" href="index.html">Bootstrap Demo</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="card.html">Card</a>
+                    <a class="nav-link text-light" href="card.html">Welcom</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="carousel.html">Carousel</a>
+                    <a class="nav-link text-light" href="carousel.html">Serivices</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="accordion.html">Accordion</a>
+                    <a class="nav-link text-light" href="accordion.html">Support MOW</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="tabs.html">Tabs</a>
-                </li>
-                <li class="nav-item">1
-                    <a class="nav-link text-light" href="grid.html">Grid Layout</a>
-                </li>
+                    <a class="nav-link text-light" href="tabs.html">About Us</a>
+                </li>               
             </ul>
 
         </div>
