--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -136,7 +136,7 @@
   
     
    <div class="container-fluid p-5 bg-success text-white text-center">
-  <footer class="py-5">
+  <footer class="mt-5">
     <div class="row">
       <div class="col-2">
         <h5>Section</h5>
@@ -195,7 +195,8 @@
   </footer>
 </div>
 
-
+    
+   
 </body>
 
 </html>
