--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -195,7 +195,10 @@
   </footer>
 </div>
 
-    
+ <div class="mt-5 p-4 bg-dark text-white text-center">
+  <p>Footer</p>
+</div>
+   
    
 </body>
 
