--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark text-light">
+    <nav class="navbar navbar-expand-sm bg-#003965 text-light">
         <div class="container">
             <a class="navbar-brand text-light" href="index.html">Bootstrap Demo</a>
             <ul class="navbar-nav">
