--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -154,9 +154,8 @@
   </footer>
 </div>
 
-<div class="b-example-divider"></div>
 
-<div class="container">
+<div class="container bg-#003965 text-light">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
