--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -87,9 +87,8 @@
             </div>
 
             <div class="col-lg-6">
-                <div class="card bg-success text-light m-5 p-5">
+                <div class="card bg-success text-light m-5 p-5 spinner-border text-success">
                     <h2>Learn More...</h2> 
-                    <i class="bi bi-calendar-date"></i>
                     <p>
                         <a href="view-source:https://www.mealsonwheelsgreeley.com/"
                             class="btn btn-light text-success">Volunteer Today</a>
