--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -87,7 +87,7 @@
             </div>
 
             <div class="col-lg-6">
-                <div class="card bg-success text-light m-5 p-5 spinner-border text-success">
+                <div class="card bg-success text-light m-5 p-5">
                     <h2>Learn More...</h2> 
                     <p>
                         <a href="view-source:https://www.mealsonwheelsgreeley.com/"
