--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -46,7 +46,7 @@
         <div class="row">
             <div class="col-lg-6">
 
-                <h1>Bootstrap Carousel</h1>
+                <h1>Helping those in Need</h1>
 
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
@@ -87,7 +87,7 @@
             </div>
 
             <div class="col-lg-6">
-                <div class="card bg-success text-light m-5 p-5">
+                <div class="card bg-light text-light m-5 p-5">
                     <h2>Learn More...</h2> 
                     <p>
                         <a href="view-source:https://www.mealsonwheelsgreeley.com/"
