--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -88,7 +88,7 @@
 
             <div class="col-lg-6">
                 <div class="card bg-light text-light m-5 p-5">
-                    <h2>Learn More...</h2> 
+                    <h2>Get Involved...</h2> 
                     <p>
                         <a href="view-source:https://www.mealsonwheelsgreeley.com/"
                             class="btn btn-light text-success">Volunteer Today</a>
@@ -96,6 +96,10 @@
                     <p>
                         <a href="view-source:https://www.mealsonwheelsgreeley.com/"
                             class="btn btn-light text-success">Make a Donation</a>
+                    </p>
+                     <p>
+                        <a href="view-source:https://www.mealsonwheelsgreeley.com/"
+                            class="btn btn-light text-success">Sponsor Us</a>
                     </p>
                 </div>
             </div>
