--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -87,19 +87,19 @@
             </div>
 
             <div class="col-lg-6">
-                <div class="card bg-light text-light m-5 p-5">
+                <div class="card bg-light text-success m-5 p-5">
                     <h2>Get Involved...</h2> 
                     <p>
                         <a href="view-source:https://www.mealsonwheelsgreeley.com/"
-                            class="btn btn-light text-success">Volunteer Today</a>
+                            class="btn btn-primary text-white">Volunteer Today</a>
                     </p>
                     <p>
                         <a href="view-source:https://www.mealsonwheelsgreeley.com/"
-                            class="btn btn-light text-success">Make a Donation</a>
+                            class="btn btn-primary text-white">Make a Donation</a>
                     </p>
                      <p>
                         <a href="view-source:https://www.mealsonwheelsgreeley.com/"
-                            class="btn btn-light text-success">Sponsor Us</a>
+                            class="btn btn-primary text-white">Sponsor Us</a>
                     </p>
                 </div>
             </div>
