--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -117,7 +117,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" width="90">
-                <h5 class="mt-3 name">Samuel Plamer</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
+                <h5 class="mt-3 name">Samantha Plamer</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
                 <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
                 <div class="mt-4">
                     <h6 class="v-profile">View Profile</h6>
@@ -125,8 +125,8 @@
             </div>
         </div>
         <div class="col-md-3">
-            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://i.imgur.com/oJmLthK.jpg" width="90">
-                <h5 class="mt-3 name">Nancy Markus</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
+            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" width="90">
+                <h5 class="mt-3 name">John Markus</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
                 <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
                 <div class="mt-4">
                     <h6 class="v-profile">View Profile</h6>
@@ -134,16 +134,7 @@
             </div>
         </div>
         <div class="col-md-3">
-            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://i.imgur.com/HFpxxJz.jpg" width="90">
-                <h5 class="mt-3 name">Martha Col</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
-                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
-                <div class="mt-4">
-                    <h6 class="v-profile">View Profile</h6>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://i.imgur.com/MZm1LNz.jpg" width="90">
+            <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKqod8x4pRyOmYwWwXXiZ1XUbdsOZLRyEvuw&usqp=CAU" width="90">
                 <h5 class="mt-3 name">Marry Jones</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
                 <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
                 <div class="mt-4">
