--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -117,28 +117,19 @@
     <div class="row">
         <div class="col-md-3">
             <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" width="90">
-                <h5 class="mt-3 name">Samantha Plamer</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
-                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
-                <div class="mt-4">
-                    <h6 class="v-profile">View Profile</h6>
+                <h5 class="mt-3 name">Samantha Plamer</h5><span class="work d-block">CEO</span>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" width="90">
-                <h5 class="mt-3 name">John Markus</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
-                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
-                <div class="mt-4">
-                    <h6 class="v-profile">View Profile</h6>
+                <h5 class="mt-3 name">John Markus</h5><span class="work d-block">Commmunity Outreach Coordinator</span>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="bg-white p-3 text-center rounded box"><img class="img-responsive rounded-circle" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKqod8x4pRyOmYwWwXXiZ1XUbdsOZLRyEvuw&usqp=CAU" width="90">
-                <h5 class="mt-3 name">Marry Jones</h5><span class="work d-block">Comapay agents house</span><span class="work d-block">real estate</span>
-                <div class="mt-4 about"><span>is a long established fact that eader&nbsp; will be distracted by the readable content.</span></div>
-                <div class="mt-4">
-                    <h6 class="v-profile">View Profile</h6>
+                <h5 class="mt-3 name">Marry Jones</h5><span class="work d-block">Head Cook</span>
                 </div>
             </div>
         </div>
