--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -114,7 +114,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" class="card-img-top" alt="...">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" class="card-img-top" alt="..." style="width:50%">
       <div class="card-body">
         <h5 class="card-title">Samantha Plamer</h5>
         <p class="card-text">CEO</p>
@@ -123,7 +123,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" class="card-img-top" alt="...">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" class="card-img-top" alt="..."style="width:50%">
       <div class="card-body">
         <h5 class="card-title">Jose Lopez</h5>
         <p class="card-text">Commmunity Outreach Coordinator</p>
@@ -132,7 +132,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKqod8x4pRyOmYwWwXXiZ1XUbdsOZLRyEvuw&usqp=CAU" class="card-img-top" alt="...">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKqod8x4pRyOmYwWwXXiZ1XUbdsOZLRyEvuw&usqp=CAU" class="card-img-top" alt="..."style="width:50%">
       <div class="card-body">
         <h5 class="card-title">Jackie Smith</h5>
         <p class="card-text">Head Cook</p>
@@ -187,6 +187,11 @@
 
 </div> 
 
+<br>
+<br>
+<br>    
+<br>    
+    
 <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
