--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -108,8 +108,12 @@
     </div>
 <br>
 <br>
-<br>    
-
+<br>
+    
+<div class="container mt-3">
+  <h1>How To Support The Vision</h1>
+ 
+</div>
      <div id="accordion">
 
   <div class="card">
