--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -110,7 +110,7 @@
 <br>
 <br>
     
-<div class="container mt-3">
+<div class="container mt-3 bg-secondary text-success">
   <h1>How To Support The Vision</h1>
  
 </div>
@@ -164,7 +164,7 @@
 <br>
 <br>
 <br>    
- <div class="container mt-3 bg-light text-success">
+ <div class="container mt-3 bg-secondary text-success">
   <h1>Meet The Team</h1>
  
 </div>   
