--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -125,7 +125,7 @@
     </div>
     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
       <div class="card-body">
-        Lorem ipsum..
+        Meals on Wheels relies on 225 volunteers who deliver over 56,000 meals a year to our clients. The impact they are making in the lives of those they serve is immeasurable.
       </div>
     </div>
   </div>
@@ -138,7 +138,7 @@
     </div>
     <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
-        Lorem ipsum..
+        Donate your car, van and truck to Meals on Wheels through our partnership with Cars Inc.
       </div>
     </div>
   </div>
@@ -151,7 +151,7 @@
     </div>
     <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
-        Lorem ipsum..
+        You can support us without any expense to you by selecting Meals on Wheels when you shop at Amazon.com and King Soopers.  Here’s how.
       </div>
     </div>
   </div>
