--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark text-light">
         <div class="container">
-            <a class="navbar-brand text-light" href="index.html">Bootstrap Demo</a>
+            <a class="navbar-brand text-light" href="index.html"><img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0"</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link text-light" href="card.html">Welcom</a>
