--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark text-light">
         <div class="container">
-            <a class="navbar-brand text-light" href="index.html"><img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0"</a>
+            <a class="navbar-brand text-light" href="index.html"><img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0" class="img-fluid"</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link text-light" href="card.html">Welcom</a>
@@ -217,7 +217,7 @@
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
     </ul>
-    <p class="text-center text-muted">&copy; 2021 Meals On Wheels Greeley, Inc</p>
+    <p class="text-center text-muted">&copy; 2021 Meals On Wheels Greeley, Inc"><img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0" class="img-fluid"></p>
   </footer>
 </div>
    
