--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -152,7 +152,7 @@
     </div>
     <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
-        You can support us without any expense to you by selecting Meals on Wheels when you shop at Amazon.com and King Soopers.  Here’s how.
+        You can support us without any expense to you by selecting Meals on Wheels when you shop at Amazon.com and King Soopers.  Here’s how.<img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0" class="img-fluid">
       </div>
     </div>
   </div>
