--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -126,7 +126,7 @@
     </div>
     <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
       <div class="card-body">
-        Meals on Wheels relies on 225 volunteers who deliver over 56,000 meals a year to our clients. The impact they are making in the lives of those they serve is immeasurable.
+        Meals on Wheels relies on 225 volunteers who deliver over 56,000 meals a year to our clients. The impact they are making in the lives of those they serve is immeasurable. <img src="https://www.pngitem.com/pimgs/m/211-2117368_volunteer-clipart-hd-png-download.png" class="img-fluid">
       </div>
     </div>
   </div>
@@ -139,7 +139,7 @@
     </div>
     <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
-        Donate your car, van and truck to Meals on Wheels through our partnership with Cars Inc.
+        Donate your car, van and truck to Meals on Wheels through our partnership with Cars Inc. <img src="https://i.pinimg.com/474x/76/17/de/7617de84d03e7acf2e2e1c46dde17645.jpg" class="img-fluid">
       </div>
     </div>
   </div>
@@ -152,7 +152,7 @@
     </div>
     <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
-        You can support us without any expense to you by selecting Meals on Wheels when you shop at Amazon.com and King Soopers.  Here’s how.<img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0" class="img-fluid">
+        You can support us without any expense to you by selecting Meals on Wheels when you shop at Amazon.com and King Soopers.  Here’s how.<img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" class="img-fluid">
       </div>
     </div>
   </div>
