--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -139,7 +139,7 @@
     </div>
     <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
       <div class="card-body">
-        Donate your car, van and truck to Meals on Wheels through our partnership with Cars Inc. <img src="https://i.pinimg.com/474x/76/17/de/7617de84d03e7acf2e2e1c46dde17645.jpg" class="img-fluid">
+        Donate your car, van and truck to Meals on Wheels through our partnership with Cars Inc. <img src="https://lh3.googleusercontent.com/proxy/9_xQgY43TANL59gHg-bIMiPDKdBv7MeJkQRJtITZHl8wqL4mgeyzcAMtnDqsFt9P3H67BsM1QAb39_yXDw0-16_RQT4GJiLz2rQqjHWlcwLO-Woptua4MPaFIwYEMLH2U3hdr2ktiGo00tVzH_FuWDiUl6rke87vFPyYccGWTw" class="img-fluid">
       </div>
     </div>
   </div>
