--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -190,7 +190,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" class="card-img-top">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" class="card-img-top"width="75">
       <div class="card-body">
         <h5 class="card-title">Samantha Plamer</h5>
         <p class="card-text">CEO</p>
@@ -201,7 +201,7 @@
 
   <div class="col">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" class="card-img-top">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" class="card-img-top"width="75">
       <div class="card-body">
         <h5 class="card-title">Jose Lopez</h5>
         <p class="card-text">Commmunity Outreach Coordinator</p>
@@ -210,7 +210,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU" class="card-img-top">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU" class="card-img-top" width="75">
       <div class="card-body">
         <h5 class="card-title">Jackie Smith</h5>
         <p class="card-text">Head Cook</p>
@@ -222,37 +222,7 @@
 <br>
 <br>
    
-	
-	
-	
 
-<div class="card-deck">
-  <div class="card">
-    <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-  </div>
-</div>
-	
-	
-	
-    
 <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
