--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -217,7 +217,15 @@
       </div>
     </div>
   </div>
-  
+  <div class="col">
+    <div class="card">
+      <img src="https://image.shutterstock.com/image-photo/stock-photo-headshot-portrait-of-happy-millennial-man-in-casual-clothes-isolated-on-grey-studio-background-250nw-1548802709.jpg" class="card-img-top" height="50" width="75">
+      <div class="card-body">
+        <h5 class="card-title">Jackie Smith</h5>
+        <p class="card-text">Head Cook</p>
+      </div>
+    </div>
+  </div>  
 	
 	
 	
