--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -194,7 +194,7 @@
     <div class="card">
       <div class="card-body">
 	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU">        
-	      <p class="card-text">Samantha Jones - CEO</p>
+	      <p class="card-text">Samantha Carroll - CEO</p>
         <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
@@ -203,7 +203,7 @@
     <div class="card">
       <div class="card-body">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU">
-        <p class="card-text">Samantha Jones - Outreach Coordinator</p>
+        <p class="card-text">Robbie Jones - Outreach Coordinator</p>
         <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
@@ -214,7 +214,7 @@
     <div class="card">
       <div class="card-body">
 	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU">        
-	      <p class="card-text">John Richards - Head Cook</p>
+	      <p class="card-text">Stephanie Cruz - Head Cook</p>
         <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
@@ -223,7 +223,7 @@
     <div class="card">
       <div class="card-body">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGUHCtPmCmg0bzFZgEPSMIniAHpjWPDXWjmceVoNUSUfhJW9F9Jvcm0-ZhKNezS-rP9kU&usqp=CAU">
-        <p class="card-text">John Richards - Volunteer Coordinator</p>
+        <p class="card-text">Johanna Richards - Volunteer Coordinator</p>
         <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
