--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -193,7 +193,7 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU">        
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEmGjLUSLLkmpIzI5ryx2EE1MjiI0V66sUKS0aBIDTgSLH6t086sKHs1dJso11iWOefVY&usqp=CAU" alt="...">        
 	      <p class="card-text">Samantha Carroll - CEO</p>
         <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
@@ -202,7 +202,7 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvRZnvE7MT1N0TBUaYiv-NaMu2O9bx8qL9Q&usqp=CAU" alt="...">
         <p class="card-text">Robbie Jones - Outreach Coordinator</p>
         <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
@@ -213,7 +213,7 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU">        
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-zwmWdsa8Ugs5UHdk-bYbnLWpukQoG73BUTMt1o1Vh4PgHX_iLiAvgWRb4_M5-dIixBo&usqp=CAU" alt="...">        
 	      <p class="card-text">Stephanie Cruz - Head Cook</p>
         <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
@@ -222,7 +222,7 @@
  <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGUHCtPmCmg0bzFZgEPSMIniAHpjWPDXWjmceVoNUSUfhJW9F9Jvcm0-ZhKNezS-rP9kU&usqp=CAU">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGUHCtPmCmg0bzFZgEPSMIniAHpjWPDXWjmceVoNUSUfhJW9F9Jvcm0-ZhKNezS-rP9kU&usqp=CAU" alt="...">
         <p class="card-text">Johanna Richards - Volunteer Coordinator</p>
         <a href="#" class="btn btn-primary">Contact Me</a>
       </div>
