--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -113,7 +113,10 @@
 
  <div class="mt-4 p-5 bg-secondary text-white rounded">
   <h1>Our Vision</h1>
-  <p>The vision of the Meals on Wheels is to make a difference in the lives of all who are unable to cook for themselves by providing hot and nutritious meals delivered by volunteers. Hot meals are delivered Monday through Friday to clients who cannot prepare them for themselves.</p>
+<br>
+<br>
+
+  <p>" The vision of the Meals on Wheels is to make a difference in the lives of all who are unable to cook for themselves by providing hot and nutritious meals delivered by volunteers. Hot meals are delivered Monday through Friday to clients who cannot prepare them for themselves. "</p>
 </div>
 	
 <br>
