--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -247,7 +247,7 @@
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
     </ul>
-    <p class="text-center text-muted">&copy; 2021 Meals On Wheels Greeley, Inc"<img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0" alt="..." class="img-fluid"></p>
+    <p class="text-center text-muted">&copy; 2021 Meals On Wheels Greeley, Inc.<img src="https://www.mealsonwheelsamerica.org/images/default-source/default-album/logo-color.png?sfvrsn=d909aa3b_0" alt="..." class="img-fluid"></p>
   </footer>
 </div>
    
