--- a/bacs200/test.html
+++ b/bacs200/test.html
@@ -126,6 +126,51 @@
                     Validator
                 </a>
             </td>
+        </tr>
+        <tr>
+            <td>PROJECT #7</td>
+            <td><a href="https://adamschott.github.io/bacs200/wanted.html">Inspire Me</a></td>
+            <td><a href="https://shrinking-world.com/course/bacs200/project/02" target="instruction">Project 2</a></td>
+             <td>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fadamschott.github.io%2Fbacs200%2Finspire.html">
+                    HTML
+                    Validator
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td>PROJECT #8</td>
+            <td><a href="https://adamschott.github.io/bacs200/wanted.html">Amuse Me</a></td>
+            <td><a href="https://shrinking-world.com/course/bacs200/project/03" target="instruction">Project 3</a></td>
+             <td>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fadamschott.github.io%2Fbacs200%2Famuse.html">
+                    HTML
+                    Validator
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td>PROJECT #9</td>
+            <td><a href="https://adamschott.github.io/bacs200/nonprofit.html">Educate Me</a></td>
+            <td><a href="https://shrinking-world.com/course/bacs200/project/04" target="instruction">Project 4</a></td>
+             <td>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fadamschott.github.io%2Fbacs200%2Feducate.html">
+                    HTML
+                    Validator
+                </a>
+            </td>
+
+        </tr>
+        <tr>
+            <td>PROJECT #10</td>
+            <td><a href="https://adamschott.github.io/bacs200/portfolio.html">Test Me</a></td>
+            <td><a href="https://shrinking-world.com/course/bacs200/project/05" target="instruction">Project 5</a></td>
+             <td>
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fadamschott.github.io%2Fbacs200%2Ftest.html">
+                    HTML
+                    Validator
+                </a>
+            </td>
 
         </tr>
     </table>
