--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -38,10 +38,12 @@
     
 <body>
     <h1>My Favorite Hero</h1>
-    <p>There's always a choice</p>>
+    <p>There's always a choice</p>
     <p>Batman</p>
 =======
     <p>"There's always a choice"</p>
     <p> -Batman</p>
+    
+    <img class="img-fluid" src="https://www.looper.com/img/gallery/heres-how-you-can-watch-every-movie-in-the-dark-knight-trilogy/intro-1610724721.jpg" alt="..."> 
 
 </html>
