--- a/bacs200/superhero.html
+++ b/bacs200/superhero.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
    <title>Superhero Gallery</title>
 <style>
 table {
@@ -22,6 +26,32 @@ tr:nth-child(even) {
 </head>
 <body>
 
+   
+   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html"></a>
+    <img class="img-fluid" src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/unco.sidearmsports.com/images/responsive_2018/unco_logo_bear.svg" alt="Bear" width="50" height="75">    
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://adamschott.github.io/bacs200/profile.html">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://shrinking-world.com/course/bacs200">Class Website</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/AdamSchott/AdamSchott.github.io">Github</a>
+        </li>    
+      </ul>
+    </div>
+  </div>
+</nav>        
+    
+   
+   
 <h2>Superhero Table</h2>
 
 <table>
