--- a/bacs200/inspire.html
+++ b/bacs200/inspire.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <title>Inspire Me</title>
 </head>
- 
+<body> 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="https://adamschott.github.io/bacs200/index.html"></a>
@@ -36,8 +36,8 @@
 <br>    
 <br>    
     
-<body>
-    <div class="mt-4 p-5 bg-black text-white rounded">
+
+    <div class="mt-4 p-5 bg-black text-white rounded"</div>
   <h1>My Favorite Hero</h1>
   <p>"There's always a choice"</p>
   <p> -  Batman</p>
