--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -237,7 +237,7 @@
 <br>
 <br>
    
-<img class="img-fluid" src="https://cdna.artstation.com/p/assets/images/images/002/537/310/large/oleksandr-pazurenko-tatooine.jpg?1462880426" class="float-end">
+<img class="img-fluid" src="https://cdna.artstation.com/p/assets/images/images/002/537/310/large/oleksandr-pazurenko-tatooine.jpg?1462880426" height="100" width="100" class="float-end">
 <div class="container">
 		
   <footer class="py-3 my-4">
