--- a/bacs200/nonprofit.html
+++ b/bacs200/nonprofit.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/icon.ico">
     <!--Change-->
 
-    <title>Khan Academy</title>
+    <title>Skywalker Travel's</title>
 
     <style>
         .fakeimg {
