--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -53,7 +53,7 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://static.wikia.nocookie.net/battlefront/images/7/79/Naboo_Theed_-_Royal_Palace_%281%29_-_Mikael_Andersson_DICE.jpg/revision/latest?cb=20180322005456" alt="Los Angeles" class="d-block w-100">
+      <img src="https://lh3.googleusercontent.com/proxy/8rLHW1SR4j_P1As9h28tWrZzvVNKezZlIXOCyzkl-7_sL-rVBtjf2anwSyA6hAsXT9CBVkcDCfRFMKi6bXw1SqD6p8-KwF7RE2mjHniWVJ5klYE19nJAlbRfq58tGWAOfoV03EnRjcYtWzSezOH0" alt="Los Angeles" class="d-block w-100">
     </div>
     <div class="carousel-item">
       <img src="https://2.bp.blogspot.com/-79UgzNjCbFA/U6d0M5LE8pI/AAAAAAAAX7w/JoSsqKhfWfY/s1600/cloud-city-concept-art-empire-strikes-back.jpg" alt="Chicago" class="d-block w-100">
