--- a/bacs200/travel/index.html
+++ b/bacs200/travel/index.html
@@ -34,9 +34,9 @@
     
      <div class="container-fluid p-5 bg-success text-white text-center">
         <a href="index.html" class="text-white">
-            <h1> Welcome to Meals on Wheels!</h1>
+            <h1> Solo & Chewy Expeditions!</h1>
         </a>
-        <p>Serving nutritious, hot meals for 50 years to those in need!</p>
+        <p>Want to travel the galaxy with the best pilots in the whole galaxy? Then book a flight with us today!</p>
     </div>
   
 
